Fixed some broken styles + added some animations

--- a/public/app-content/style.css
+++ b/public/app-content/style.css
@@ -13,6 +13,8 @@
  }
 
  .navbar {
+     font-family: Lato;
+     font-weight: 300;
      width: 100vw;
      background: rgba(56, 56, 56, 0.6);
      border: none;
@@ -21,6 +23,11 @@
 
  .navbar-default .navbar-nav>li>a {
      color: white;
+ }
+
+ .navbar-default .navbar-nav>li>a:hover{
+     color: #41bead;
+     cursor: pointer;
  }
 
  .navbar-brand {
@@ -36,15 +43,18 @@
  }
 
  #signup-link {
-     border: 1px solid white;
-     border-radius: 10px;
+     border: 2px solid white;
+     border-radius: 8px;
      margin: 15%;
      width: 100%;
-     padding: 2px 10px;
+     padding: 5px;
  }
 
  #signup-link:hover {
-     border: 1px solid black;
+     border-color: #41bead;
+     background: #41bead;
+     color:white;
+     cursor: pointer;
  }
 
  .container {
@@ -104,7 +114,7 @@
 
  #welcome-text {
      height: 100%;
-     font-family: Lato;
+     font-family: Lato !important;
      font-weight: 300;
      font-size: 4vh;
      padding: 4%;
